fix(sdk): rating system back button check if visible

--- a/scripts/buildfire/components/ratingSystem/index.css
+++ b/scripts/buildfire/components/ratingSystem/index.css
@@ -250,9 +250,8 @@ span.rating-time-ago {
 }
 
 .ovarall-rating-container {
-  padding: 10px 20px 17px;
+  padding: 0 20px 17px;
   position: relative;
-  
   padding-top: calc(env(safe-area-inset-top) + 10px) !important;
 }
 
